--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,43 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.button {
+  border-radius: 20px;
+  padding: 10px 15px;
+  border: 1px solid;
+  cursor: pointer;
+  margin: 0 10px;
+}
+
+.list-title {
+  font-size: 1.2rem;
+}
+
+.inputBox {
+  border: 2px solid grey;
+  border-radius: 0.5rem;
+  padding: 0.7rem 0.7rem;
+  margin: 0 1rem;
+}
+
+.invalidInput {
+  border: 2px solid red;
+  border-radius: 0.5rem;
+  padding: 0.7rem 0.7rem;
+  margin: 0 1rem;
+}
+
+.validInput {
+  border: 2px solid green;
+  border-radius: 0.5rem;
+  padding: 0.7rem 0.7rem;
+  margin: 0 1rem;
+}
+
+li {
+  margin: 0.5rem 0;
+  font-size: 1.3rem;
+  letter-spacing: 0.1rem;
+  font-variant: petite-caps;
+}
